--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "swc src -d dist --source-maps --copy-files",
+    "build": "npm install && swc src -d dist --source-maps --copy-files",
     "start": "NODE_ENV=production node dist/server.js"
   },
   "author": "",
